Fix header bar button 'collapsing issue'

--- a/sass/tr-cd/_header.scss
+++ b/sass/tr-cd/_header.scss
@@ -8,7 +8,9 @@
 .sidebar-activate{
   @include user-select-none;
   @include no-tap-color;
+  @include clearfix;
   cursor: pointer;
+  float: left;
 
 }
 
